--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.*"
+        "illuminate/support": "4.0.*",
+        "league/flysystem": "0.2.*"
     },
     "require-dev": {
         "orchestra/testbench": "2.0.*"
