--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.*",
-        "league/flysystem": "0.2.*"
+        "illuminate/support": "4.0.*"
     },
     "require-dev": {
         "orchestra/testbench": "2.0.*"
