--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "gulp-jshint": "~1.4.2",
     "gulp-csslint": "~0.1.3",
     "gulp-util": "~2.2.14",
-    "gulp-bower": "0.0.2"
+    "gulp-bower": "0.0.2",
+    "gulp-phpunit": "~0.3.0",
+    "gulp-plumber": "~0.5.6"
   }
 }
