--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "illuminate/support": "4.0.*"
     },
     "require-dev": {
-        "way/laravel-test-helpers": "dev-master"
+        "way/laravel-test-helpers": "dev-master",
+        "mockery/mockery": "0.9.*@dev"
     },
     "autoload": {
         "classmap": [
