Add image minification support go gulp

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-util": "~2.2.14",
     "gulp-bower": "0.0.2",
     "gulp-phpunit": "~0.3.0",
-    "gulp-plumber": "~0.5.6"
+    "gulp-plumber": "~0.5.6",
+    "gulp-imagemin": "~0.1.5"
   }
 }
