--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "gulp-bower": "0.0.2",
     "gulp-phpunit": "~0.3.0",
     "gulp-plumber": "~0.5.6",
-    "gulp-imagemin": "~0.1.5"
+    "gulp-imagemin": "~0.1.5",
+    "gulp-load-plugins": "~0.4.0",
+    "gulp-size": "~0.1.3",
+    "gulp-cache": "~0.1.2"
   }
 }
