--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,18 @@
             "email": "flynsarmy@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git://github.com/orchestral/phpseclib.git"
+        }
+    ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.1.*"
+        "orchestra/foundation": "2.1.*"
     },
     "require-dev": {
+        "orchestra/testbench": "2.1.*",
         "way/laravel-test-helpers": "dev-master",
         "mockery/mockery": "0.9.*@dev"
     },
